# trading-partner

./: .dockerignore  .gitignore  MIGRATION_SUMMARY.md  Makefile  README.md  mypy.ini  pre-commit-config.yaml  pyproject.toml  ruff.toml  setup.cfg  smoke_fetch.py  sync_code.sh
_assistant/: context.yaml
apps/api/: deps.py  main.py
apps/api/routers/: dev.py  health.py  prices.py
apps/api/services/: jobs_service.py  jobs_service.py.off  prices_ingestion.py
apps/scheduler/: flow_daily.py  worker.py
apps/workers/: run_daily_pipeline.py
configs/: dev.yaml  prod.yaml
docs/: prices_daily.yaml
docs/generator/: gen_pydantic.py  prices_daily.py
docs/service-contracts/: queue-and-repo.md
infra/docker/: api.Dockerfile  base.Dockerfile  docker-compose.yml  scheduler.Dockerfile  worker.Dockerfile
libs/adapters/: queue.py  queue_inmemory.py  repo.py  repo_inmemory.py  repo_parquet.off  repo_parquet.py  repo_parquet_partitioned.py
libs/connectors/: alpaca_fetcher.py  base.py  registry.py  yfinance_fetcher.py
libs/contracts/: job_models.py  prices_daily.py  storage_meta.py
libs/observability/: logging.py
libs/quality/: checks.py
libs/storage/: clickhouse.py  config.py  lakehouse_paths.py  paths.py  s3_client.py
libs/transforms/: daily_clean.py
test/: test_ingestion.py  test_transform.py
