[tool.poetry]
name = "trading-partner"
version = "0.1.0"
description = "Bootstrap kit for data pipelines: connectors → quality → storage → API"
authors = ["You <you@example.com>"]
packages = [
{ include = "apps", from = "." },
{ include = "libs", from = "." },
]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic-settings = "^2.3.4"
httpx = "^0.27.0"
requests = "^2.32.3"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
clickhouse-connect = "^0.7.19"
boto3 = "^1.34.162"
minio = "^7.2.9"
SQLAlchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
prefect-client = "*"
yfinance = "^0.2.41"
python-dotenv = "^1.0.1"
great-expectations = "^0.18.14"
structlog = "^24.1.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-logging = "^0.46b0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
httpx = { version = "^0.27.0", extras = ["cli"] }
ruff = "^0.5.6"
mypy = "^1.11.0"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"